--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.vectomatic</groupId>
 		<artifactId>vectomatic-parent</artifactId>
-		<version>0.7</version>
+		<version>0.4</version>
 	</parent>
 	<artifactId>lib-gwt-svg</artifactId>
 	<packaging>jar</packaging>
-	<version>0.5.14-SNAPSHOT</version>
+	<version>0.5.9</version>
 	<name>lib-gwt-svg</name>
 	<description>A GWT library to access the SVG functionalities of web browsers</description>
 	<url>http://www.vectomatic.org/libs/lib-gwt-svg</url>
@@ -18,11 +18,14 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>scm:git:git://git/lib-gwt-svg.git</url>
-		<connection>scm:git:git://git/lib-gwt-svg.git</connection>
-		<developerConnection>scm:git:git://git/lib-gwt-svg.git</developerConnection>
-	  <tag>HEAD</tag>
-  </scm>
+		<url>scm:git:git@github.com:laaglu/lib-gwt-svg.git</url>
+		<connection>scm:git:git@github.com:laaglu/lib-gwt-svg.git</connection>
+		<developerConnection>scm:git:git@github.com:laaglu/lib-gwt-svg.git</developerConnection>
+	</scm>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -41,6 +44,17 @@
 		</dependency>
 	</dependencies>
 	<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
 		<!-- Add java sources to the jar (necessary for GWT) -->
 		<resources>
 			<resource>
